# n-memory

./: .coderabbit.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RUNBOOK.md  SECURITY.md  glama.json  install.sh  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  mcpb-bundle.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mirror.yml  release.yml
assets/: demo-script.md
src/: bridge.rs  capsule.rs  classify.rs  consolidate.rs  export.rs  extract.rs  ingest.rs  journal.rs  lib.rs  main.rs  mcp_app.rs  merge.rs  relation.rs  retrieve.rs  server.rs  spool.rs  store.rs  substrate.rs  sync.rs  taint.rs  visual.rs
tests/: conformance_bridge.rs  conformance_capsule.rs  conformance_ingest.rs  conformance_retrieve.rs  conformance_store.rs  conformance_zero_python.rs  determinism.rs
tests/fixtures/: ingest_pack.json  representative_capsules.json
tests/fixtures/bridge/home_both/.claude/: CLAUDE.md
tests/fixtures/bridge/home_both/.claude2/: CLAUDE.md
tests/fixtures/bridge/home_claude3/.claude2/: CLAUDE.md
tests/fixtures/bridge/home_claude3/.claude3/: CLAUDE.md
tests/fixtures/bridge/home_legacy/.claude/: CLAUDE.md
tests/fixtures/bridge/memory/: a.md  b.md  c.MD  notes.txt
tests/fixtures/bridge/memory/sub/: nested.md
tests/fixtures/bridge/project/: AGENTS.md  CLAUDE.md
